# config_github

config/: CMakeLists.txt
config/head/: DataStruct.h  GetAttendanceLists.h  WriteAttendanceLists.h  define.h  singleton.h
config/src/: .WriteAttendanceLists.cpp.swp  GetAttendanceLists.cpp  WriteAttendanceLists.cpp  main.cpp
